# Ollama_win

./: .gitignore  CMakeLists.txt  README.md  README.txt  installer.iss  main.cpp
payload/: README  run.bat
